<resources>
    <string name="app_name">Intelligence</string>
    <string name="bem_vindo">Seja Bem-vindo ao Intelligence!</string>
    <string name="info1">Antes de iniciar, informe o Evento</string>
    <string name="info2">e a Atividade.</string>
    <string name="img_eventos">img_eventos</string>
    <string name="img_atividade">img_atividade</string>
    <string name="iniciar">Iniciar</string>
    <string name="login">Login: </string>
    <string name="dica_login">Digite seu login</string>
    <string name="senha">Senha: </string>
    <string name="inteligence">img_intelligence</string>
    <string name="dica_senha">Senha</string>
    <string name="logar">Entrar</string>
    <string name="limpar">Limpar</string>
    <string name="sair">Sair</string>
    <string name="Mostrar_senha">Mostrar senha</string>
    <string name="manter_conectado">Manter-me conectado</string>
    <string name="txtvw_ola_user">Olá, </string>
    <string name="toast_saiu_app">Você saiu do Intelligence</string>
    <string name="toast_login_invalido">Login inválido!</string>
	<string name="toast_info_sem_net">Você não está conectado em nunhuma rede! Verifique sua conexão com a internet</string>
	<string name="toast_is_net_wifi">WI-Fi Conectado!</string>
	<string name="toast_is_net_3g">3G Conectado!</string>
	<string name="toast_qr_valido">Qr code válido. Salvo no histórico!</string>
	<string name="toast_qr_invalido">Qr Code inválido! Contate a administração do seu evento. Obrigado!</string>
	<string name="toast_envia_dado_acima">Enviar dados acima!</string>
	<string name="toast_dados_enviados">Dados enviados com sucesso!</string>
	<string name="toast_dados_nao_enviados">Erro ao enviar os dados. Tente novamente!</string>
	<string name="toast_dado_enviado">Dado enviado com sucesso!</string>
	<string name="toast_dado_nao_enviado">Erro ao enviar o dado. Tente novamente!</string>
	<string name="alerta_logando">Logando!</string>
	<string name="alerta_carrega_dados">Carregando dados...</string>
	<string name="alerta_login_sucesso">Logado com sucesso!</string>
	<string name="alerta_deseja_envialos">Deseja envia-los?</string>
	<string name="alerta_enviando_dados">Enviando dados!</string>
	<string name="alerta_dados_sendo_enviados">Dados sendo enviados!</string>
	<string name="alerta_atencao">Atenção!</string>
	<string name="alerta_deseja_sair">Deseja realmente sair?</string>
	<string name="alerta_cancelar">Cancelar</string>
	<string name="alerta_enviar_dado">Enviar Dado?</string>
	<string name="alerta_enviando_dado">Enviando dado!</string>
	<string name="alerta_dado_sendo_enviado">Dado sendo enviado!</string>
	<string name="alerta_erro">Erro!</string>
	<string name="alerta_erro_ao_enviar_dados">Erro ao tentar o envio de dados!</string>
	<string name="alerta_atividade_selecionada_anteriormente">Identificamos que existem dados com outra atividade, para ser enviados. 
	    Você precisa envia-los antes de selecionar outra atividade.</string>
    <string name="sem_label"></string>
    <string name="action_settings">Settings</string>
    <string name="tda_qrcode">Intelligence</string>
    <string name="ola_usuario">Olá, </string>
    <string name="info_eventos">Eventos</string>
    <string name="info_atividade">Atividades</string>
    <string name="historico">Histórico</string>
    <string name="title_activity_historico">Histórico</string>
    <string name="leitura">Leitura: </string>
    <string name="voltar">Voltar</string>
    <string name="historico_vazio">Lista de histórico está vazia!</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="preferencias">Preferências</string>
    <string name="ajuda">Ajuda</string>
    <string name="enviar">Enviar Todos</string>
    <string name="apagar">Apagar Todos</string>
    <string name="nao_implementado">Função não implementada.</string>
    <string name="historico_com_dados">Verificamos que existe dados no seu histórico de dados.</string>
    <string name="menu_intelligence_sobre">Sobre</string>
    <string name="menu_intelligence_sair">Sair</string>
    <string name="history_enviar_um">Enviar</string>
    <string name="history_empty_detail">Nenhum QrCode foi registrado.</string>
    <string name="app_picker_name">Applications</string>
    <string name="bookmark_picker_name">Bookmarks</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Dial number</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product search</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="button_share_app">Application</string>
    <string name="button_share_bookmark">Bookmark</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_share_clipboard">Clipboard</string>
    <string name="button_share_contact">Contact</string>
    <string name="button_show_map">Show map</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_web_search">Web search</string>
    <string name="button_wifi">Connect to Network</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="history_clear_text">Clear history</string>
    <string name="history_clear_one_history_text">Clear</string>
    <string name="history_email_title">Barcode Scanner history</string>
    <string name="history_empty">The history is empty.</string>
    <string name="history_send">Send history</string>
    <string name="history_title">History</string>
    <string name="menu_encode_mecard">Use MECARD</string>
    <string name="menu_encode_vcard">Use vCard</string>
    <string name="menu_help">Help</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">Place a Qr Code inside the viewfinder rectangle to scan it.</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="msg_google_books">Google</string>
    <string name="msg_google_product">Google</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="msg_redirect">Redirect</string>
    <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
    <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
    <string name="msg_sbc_no_page_returned">No page returned</string>
    <string name="msg_sbc_page">Page</string>
    <string name="msg_sbc_results">Results</string>
    <string name="msg_sbc_searching_book">Searching book\u2026</string>
    <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
    <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
    <string name="msg_share_text">Or type some text and press Enter</string>
    <string name="msg_sure">Apagar todos?</string>
    <string name="msg_confirmar_envio">Enviar todos?</string>
    <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_auto_focus_title">Use auto focus</string>
    <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
    <string name="preferences_bulk_mode_title">Bulk scan mode</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
    <string name="preferences_custom_product_search_title">Custom search URL</string>
    <string name="preferences_decode_1D_title">1D barcodes</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_device_bug_workarounds_title">Device Bug Workarounds</string>
    <string name="preferences_disable_continuous_focus_summary">Use only standard focus mode</string>
    <string name="preferences_disable_continuous_focus_title">No continuous focus</string>
    <string name="preferences_disable_exposure_title">No exposure</string>
    <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
    <string name="preferences_front_light_title">Use front light</string>
    <string name="preferences_front_light_auto">Automatic</string>
    <string name="preferences_front_light_off">Off</string>
    <string name="preferences_front_light_on">On</string>
    <string name="preferences_general_title">General settings</string>
    <string name="preferences_invert_scan_title">Invert scan</string>
    <string name="preferences_invert_scan_summary">Scan for white barcodes on black background. Not available on some devices.</string>
    <string name="preferences_name">Settings</string>
    <string name="preferences_play_beep_title">Beep</string>
    <string name="preferences_remember_duplicates_summary">Store multiple scans of the same barcode in History</string>
    <string name="preferences_remember_duplicates_title">Remember duplicates</string>
    <string name="preferences_result_title">Result settings</string>
    <string name="preferences_scanning_title">When scanning for barcodes, decode\u2026</string>
    <string name="preferences_search_country">Search country</string>
    <string name="preferences_try_bsplus">Try Barcode Scanner+</string>
    <string name="preferences_try_bsplus_summary">Enhanced with new features and interface</string>
    <string name="preferences_supplemental_summary">Try to retrieve more information about the barcode contents</string>
    <string name="preferences_supplemental_title">Retrieve more info</string>
    <string name="preferences_vibrate_title">Vibrate</string>
    <string name="result_address_book">Found contact info</string>
    <string name="result_calendar">Found calendar event</string>
    <string name="result_email_address">Found email address</string>
    <string name="result_geo">Found geographic coordinates</string>
    <string name="result_isbn">Found book</string>
    <string name="result_product">Found product</string>
    <string name="result_sms">Found SMS address</string>
    <string name="result_tel">Found phone number</string>
</resources>