<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa"
    tools:context="br.com.intelligence.TelaDeAtividades" >

    <RelativeLayout
        android:id="@+id/layout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff" >

        <TextView
            android:id="@+id/txt_info2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/info1"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_info3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_info2"
            android:layout_centerHorizontal="true"
            android:text="@string/info2"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spn_eventos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_info3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            android:background="#fafafa"
            android:contentDescription="@string/info_atividade" />

        <Button
            android:id="@+id/button1"
            style="@style/ShareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txt_info2"
            android:layout_alignRight="@+id/txt_info2"
            android:layout_below="@+id/spn_atividades"
            android:layout_marginTop="40dp"
            android:background="#ff7c2a"
            android:onClick="iniciar"
            android:text="@string/iniciar"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spn_atividades"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="#fafafa"
            android:layout_below="@+id/spn_eventos"
            android:layout_marginTop="14dp" />

    </RelativeLayout>

</RelativeLayout>